[gd_scene load_steps=10 format=3 uid="uid://dwdf6htouufpq"]

[ext_resource type="Script" path="res://Assets/Content/Actors/Enemy/EnemyCharacter.gd" id="1_swmw1"]
[ext_resource type="Script" path="res://Assets/Scripts/Tools/oscillator.gd" id="14_wfx5m"]
[ext_resource type="Script" path="res://Assets/Content/Actors/StateMachine.gd" id="15_g0hof"]
[ext_resource type="Script" path="res://Assets/Scripts/Tools/HealthSystem.gd" id="16_na3of"]
[ext_resource type="Texture2D" uid="uid://cdgwslyh7yoqb" path="res://Assets/Sprites/UI/UI_Exclamation.png" id="18_c6fl5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_83pww"]
radius = 0.13356
height = 0.550118

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ejngb"]
radius = 0.27663
height = 0.611648

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m84u2"]
radius = 0.344004
height = 0.688008

[sub_resource type="SphereShape3D" id="SphereShape3D_ad4o2"]
radius = 8.30456

[node name="EnemyCharacter" type="CharacterBody3D" node_paths=PackedStringArray("_HitBox", "_HurtBox", "_visionRay")]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_swmw1")
_HitBox = NodePath("HitBox/HitBoxCollisionShape3D")
_HurtBox = NodePath("HurtBox/HurtBoxCollisionShape3D")
_atkRange = 1.0
_radiusToTarget = 0.8
_visionRay = NodePath("RayCast3D")
_soundAtk = "ZombieAtk"
SPEED = 4.0

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.804255, 0)
visible = false
text = "koko"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.104526, 0)
shape = SubResource("CapsuleShape3D_83pww")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0.8, 0, 0, 1)
debug_shape_thickness = 1

[node name="HitBox" type="Area3D" parent="."]

[node name="HitBoxCollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.00837708, -0.00622559, 0)
shape = SubResource("CapsuleShape3D_ejngb")

[node name="HurtBox" type="Area3D" parent="."]

[node name="HurtBoxCollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0148965, 0)
shape = SubResource("CapsuleShape3D_m84u2")

[node name="DetectionZone" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionZone"]
shape = SubResource("SphereShape3D_ad4o2")

[node name="Oscillator" type="Node" parent="."]
script = ExtResource("14_wfx5m")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("15_g0hof")

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("16_na3of")
_baseHp = 50.0

[node name="exclamation" type="Sprite3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -0.0112939, 0.298366, -0.254338)
visible = false
billboard = 1
texture_filter = 0
texture = ExtResource("18_c6fl5")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 1.0
neighbor_distance = 1.0
max_neighbors = 30
time_horizon_agents = 0.01
max_speed = 0.01
use_3d_avoidance = true
avoidance_layers = 3
avoidance_mask = 3

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_detection_zone_area_entered"]
[connection signal="TakeDamage" from="HealthSystem" to="." method="_on_health_system_take_damage"]
[connection signal="TakeDamage" from="HealthSystem" to="HealthSystem" method="_on_take_damage"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
